ci(gen): buf generate up to date
